<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NBUT SmartHome</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="image">image</string>
    <string name="common_loading">努力加载中</string>
    
    <string name="activity_message_title">消息</string>
    <string name="activity_log_title">日志</string>
    <string name="activity_general_title">通用</string>
    <string name="activity_general_tixing">异常提醒</string>
    <string name="activity_general_changjing">场景通知</string>
    <string name="activity_feedback_title">意见反馈</string>
    <string name="activity_netcamera_title">网络摄像头</string>
    <string name="activity_scensesetting_title">场景设置</string>
    <string name="activity_scensesetting_event">事件编辑</string>
    <string name="activity_feedback_hint">您的意见对我们非常重要！感谢你的来信！</string>
    <string name="activity_colorlight_on">彩灯变色</string>
    
    <string name="fragment_scenes_title">场景</string>
    <string name="fragment_scenes_more">添加</string>
    <string name="fragment_background">背景View说明</string>
    <string name="fragment_type_title">类别</string>
    <string name="fragment_setting_title">设置</string>
    <string name="fragment_setting_image0_name">头像</string>
    <string name="fragment_setting_id_name">体验账号</string>

    <string name="button_back">返回</string>
    <string name="button_more">更多</string>
    <string name="button_save">存储</string>
    <string name="button_add">添加</string>
    <string name="button_delete">删除</string>
    <string name="imageview">图片</string>
    <string name="text_sensor0">温度：</string>
    <string name="text_sensor1">湿度：</string>
    <string name="text_sensor2">光照(门)：</string>
    <string name="text_sensor3">光照(窗)：</string>
    <string name="text_sensor4">光照(外)：</string>
    <string name="text_curtain_open">开启</string>
    <string name="text_curtain_stop">暂停</string>
    <string name="text_curtain_close">关闭</string>
    <string name="text_prosensor0">烟雾传感器：</string>
    <string name="text_prosensor1">人体红外（门）：</string>
    <string name="text_prosensor2">人体红外（窗）：</string>
    <string name="text_prosensor3">门窗磁1：</string>
    <string name="text_prosensor4">门窗磁2：</string>
    <string name="text_prosensor5">门窗磁3：</string>
    <string name="text_prosensor6">门窗磁4：</string>
    <string name="text_prosensor7">门窗磁5：</string>
    <string name="text_avbutton0">开/关</string>
    <string name="text_avbutton1">设置</string>
    <string name="text_avbutton2">直播</string>
    <string name="text_avbutton3">影视</string>
    <string name="text_avbutton4">游戏</string>
    <string name="text_avbutton5">应用</string>
    <string name="text_avbutton6">←</string>
    <string name="text_avbutton7">信源</string>
    <string name="text_avbutton8">→</string>
    <string name="text_avbutton9">主页</string>
    <string name="text_avbutton10">上</string>
    <string name="text_avbutton11">信息</string>
    <string name="text_avbutton12">左</string>
    <string name="text_avbutton13">确定</string>
    <string name="text_avbutton14">右</string>
    <string name="text_avbutton15">返回</string>
    <string name="text_avbutton16">下</string>
    <string name="text_avbutton17">菜单</string>
    <string name="text_avbutton18">音量 -</string>
    <string name="text_avbutton19">音量 +</string>
    <string name="text_avbutton20">备1</string>
    <string name="text_avbutton21">备2</string>
    <string name="text_avbutton22">备3</string>
    <string name="text_avbutton23">备4</string>
    <string name="text_avbutton24">播放默认视频</string>
    <string name="text_air0">当前温度</string>
    <string name="text_air1">设置温度</string>
    <string name="text_repeat">重复</string>
    <string name="text_label">标签</string>
    <string name="text_event">事件</string>
    <string name="text_delete">删除场景</string>
    <string name="text_addevent">保存事件</string>
    
    <string name="text_general0">重置数据</string>
    
    <string name="text_network_unavailable">网络不可用</string>
    
        <!-- 摄像头播放模块 -->
    <string name="live_play_name">实时预览</string>
    <string name="record_play_name">录像播放</string>
    <string name="video_flow_count">流量：</string>
    <string name="video_flow_speed">码率：</string>
    <string name="video_flow_unit_M">M</string>
    <string name="video_flow_unit_K_By_S">K/S</string>
    <string name="video_default_time">00:00:00</string>
    <string name="video_monitor_online_fail_restart">网络断开，请检查网络</string>
    <string name="video_monitor_online_restart"></string>
    <string name="video_monitor_unsupport_audio_talk">该设备不支持语音对讲功能</string>
    <string name="video_monitor_media_talk">开始对讲</string>
    <string name="video_monitor_media_talk_close">对讲关闭</string>
    <string name="video_monitor_load_talk_sound_error">缓冲或对讲中，无法开启声音</string>
    <string name="video_monitor_sound_open">声音打开</string>
    <string name="video_monitor_sound_close">声音关闭</string>
    <string name="video_monitor_image_capture_success">截图成功</string>
    <string name="video_monitor_image_capture_failed">截图失败</string>
    <string name="video_monitor_video_record_success">录制成功</string>
    <string name="video_monitor_video_record_failed">录制失败</string>
    <string name="video_monitor_media_record">开始录制</string>
    <string name="video_monitor_media_talk_ready">对讲已准备好</string>
    <string name="video_monitor_talk_open_error">对讲打开失败</string>
    <string name="video_monitor_play_error">画面打开失败,请检查网络或摄像头后重试</string>
    <string name="video_monitor_seek_error">画面定位失败</string>
    <string name="video_monitor_data_cache">数据缓冲中</string>
    <string name="video_monitor_record_play_error">录像播放失败</string>
    <string name="video_monitor_change_stream_normal">正在切换成"流畅"模式</string>
    <string name="video_monitor_change_stream_hd">正在切换成"高清"模式</string>
    <string name="beg_hour_data_remind">开始时间-小时：</string>
    
    
    
</resources>
